objects/Destination_Org__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>if(Step_Count__c &gt; 0,
Count_Completed__c / Step_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_Completed__c</fullName>
        <label># Completed</label>
        <summaryFilterItems>
            <field>Deployment_Job__c.Status__c</field>
            <operation>equals</operation>
            <value>Success, Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>Deployment_Job__c.Destination_Org__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <formula>IF(Step_Count__c &gt; 0,
SUM_Deployed__c / Step_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Destination Orgs</relationshipLabel>
        <relationshipName>Destination_Orgs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SUM_Deployed__c</fullName>
        <label>SUM Deployed</label>
        <summarizedField>Deployment_Job__c.Deployed__c</summarizedField>
        <summaryForeignKey>Deployment_Job__c.Destination_Org__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>IMAGE( 
  CASE(  Status__c,  &quot;Completed Successfully&quot;, &quot;/img/samples/flag_green.gif&quot;,
  &quot;In progress&quot;, &quot;/img/loading.gif&quot;, 
  &quot;Completed with Errors&quot;, &quot;/img/samples/flag_red.gif&quot;, 
  &quot;/s.gif&quot;), 
   &quot;&quot; )</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Completed with Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step_Count__c</fullName>
        <label>Step Count</label>
        <summaryForeignKey>Deployment_Job__c.Destination_Org__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>To_Org_Name__c</fullName>
        <formula>To_Org__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Org__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>To Org</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Org__c.CreatedById</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Deployments To</relationshipLabel>
        <relationshipName>Deployments_to</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Destination Org</label>
    <nameField>
        <displayFormat>DO-{0000}</displayFormat>
        <label>Destination Org Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Destination Orgs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>